# btc-nova-lc

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  genlog.sh  genlog_1024.sh  genlog_batch.sh
examples/: validate_btc_header_batch.rs  validate_btc_headers.rs
logs/: arecibo_output_100_1000.txt  arecibo_output_10_10000.txt  arecibo_output_128_8.txt  arecibo_output_16_64.txt  arecibo_output_1_1024.txt  arecibo_output_2_512.txt  arecibo_output_32_32.txt  arecibo_output_4_256.txt  arecibo_output_64_16.txt  arecibo_output_8_128.txt  arecibo_time_output_100000.txt  arecibo_time_output_100_1000.txt  arecibo_time_output_10_10000.txt  arecibo_time_output_128_8.txt  arecibo_time_output_16_64.txt  arecibo_time_output_1_1024.txt  arecibo_time_output_2_512.txt  arecibo_time_output_32_32.txt  arecibo_time_output_4_256.txt  arecibo_time_output_64_16.txt  arecibo_time_output_8_128.txt  output_100_1000.txt  output_10_10000.txt  output_128_8.txt  output_16_64.txt  output_1_1024.txt  output_2_512.txt  output_32_32.txt  output_4_256.txt  output_64_16.txt  output_8_128.txt  time_output_100000.txt  time_output_100_1000.txt  time_output_10_10000.txt  time_output_128_8.txt  time_output_16_64.txt  time_output_1_1024.txt  time_output_2_512.txt  time_output_32_32.txt  time_output_4_256.txt  (+2 more)
scripts/: verify_btc_headers.py
src/: btc_header.rs  lib.rs  median.rs  target.rs  uint256.rs  utils.rs
